Intial support for opening and closing positions via REST

--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/integration/java"/>
+	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8/"/>
 	<classpathentry kind="var" path="MAVEN_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25.jar" sourcepath="MAVEN_REPO/org/slf4j/slf4j-api/1.7.25/slf4j-api-1.7.25-sources.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/com/google/guava/guava/23.0/guava-23.0.jar" sourcepath="MAVEN_REPO/com/google/guava/guava/23.0/guava-23.0-sources.jar"/>
@@ -10,6 +11,8 @@
 	<classpathentry kind="var" path="MAVEN_REPO/org/apache/httpcomponents/httpclient/4.5.2/httpclient-4.5.2.jar" sourcepath="MAVEN_REPO/org/apache/httpcomponents/httpclient/4.5.2/httpclient-4.5.2-sources.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/org/apache/httpcomponents/httpcore/4.4.5/httpcore-4.4.5.jar" sourcepath="MAVEN_REPO/org/apache/httpcomponents/httpcore/4.4.5/httpcore-4.4.5-sources.jar"/>
 	<classpathentry kind="var" path="MAVEN_REPO/com/google/code/gson/gson/2.8.2/gson-2.8.2.jar" sourcepath="MAVEN_REPO/com/google/code/gson/gson/2.8.2/gson-2.8.2-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/org/slf4j/log4j-over-slf4j/log4j-over-slf4j-1.7.25.jar" sourcepath="MAVEN_REPO/org/slf4j/log4j-over-slf4j/log4j-over-slf4j-1.7.25-sources.jar"/>
+	<classpathentry kind="var" path="MAVEN_REPO/uk/org/lidalia/sysout-over-slf4j/1.0.2/sysout-over-slf4j-1.0.2.jar" sourcepath="MAVEN_REPO/uk/org/lidalia/sysout-over-slf4j/1.0.2/sysout-over-slf4j-1.0.2-sources.jar"/>
 	<classpathentry kind="lib" path="lib/lightstreamer-client-6.0.2.jar"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/robindrew-common"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/robindrew-trading"/>
