Added gradle build

--- a/.project
+++ b/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>robindrew-trading-fxcm</name>
+	<name>robindrew-trading-igindex</name>
 	<comment></comment>
 	<projects/>
 	<natures>
